<resources>
    <string name="app_name">OurSingapore</string>
    <string name="song_title">Name</string>
    <string name="enter_song_title_here">Enter name of island here</string>
    <string name="singers">Description</string>
    <string name="enter_singers_name_here">Enter description of island here</string>
    <string name="year">Square Km</string>
    <string name="enter_year_of_release_here">Enter the area of the island(km) here</string>
    <string name="stars">Stars</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="insert">insert</string>
    <string name="show_list">show list</string>
    <string name="song_id">ID</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="cancel">cancel</string>
    <string name="show_all_songs_with_5_stars">show all islands with 5 stars</string>
    <string name="show_all_songs">show all islands</string>
    <string name="return_to_main_page">Return to Main Page</string>
</resources>